compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__no_let_binding_snapshot_3.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 597
expression: "let wobble:Int = 32\n        wobble = 42"
snapshot_kind: text
---
----- SOURCE CODE
let wobble:Int = 32
        wobble = 42

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:16
  │
2 │         wobble = 42
  │                ^ There must be a 'let' to bind variable to value

See: https://tour.gleam.run/basics/assignments/
Hint: Use let for binding.
