compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__private_internal_type_alias.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1056
expression: "\n@internal\ntype Alias = Int\n"
snapshot_kind: text
---
----- SOURCE CODE

@internal
type Alias = Int


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @internal
  │ ^^^^^^^^^ Redundant internal attribute

Only a public definition can be annotated as internal.
Hint: Remove the `@internal` annotation.
