compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__reserved_delegate.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 871
expression: const delegate = 1
snapshot_kind: text
---
----- SOURCE CODE
const delegate = 1

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:7
  │
1 │ const delegate = 1
  │       ^^^^^^^^ This is a reserved word

Hint: I was expecting to see a name here.
